[#164, #165] - beautify grammar for optional parameters